; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_getprio.c__pthread_getprio.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_getprio.c__pthread_getprio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sched_param = type { i32 }

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @_pthread_getprio(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.sched_param, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = call i32 @_pthread_getschedparam(i32 %6, i32* %3, %struct.sched_param* %5)
  store i32 %7, i32* %4, align 4
  %8 = icmp eq i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = getelementptr inbounds %struct.sched_param, %struct.sched_param* %5, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %4, align 4
  br label %14

12:                                               ; preds = %1
  %13 = load i32, i32* %4, align 4
  store i32 %13, i32* @errno, align 4
  store i32 -1, i32* %4, align 4
  br label %14

14:                                               ; preds = %12, %9
  %15 = load i32, i32* %4, align 4
  ret i32 %15
}

declare dso_local i32 @_pthread_getschedparam(i32, i32*, %struct.sched_param*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
